--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
     <section id="about" class="mb-5">
       <h2 class="section-title">About Me</h2>
       <p class="lead text-center">
-        Hi, I'm Vishal—a data professional passionate about transforming raw data into actionable insights.
-        With expertise in ETL processes, data analysis, and predictive modeling, I enjoy tackling challenging projects 
+        Hi, I'm Vishal—a Dedicated and results-driven Data Analyst with a solid background in data management, predictive modelling, and business intelligence. Skilled in R, Python, SQL, and various data visualisation tools, with a proven track record of delivering actionable insights across multiple domains. Adept at implementing data quality assurance measures, collaborating with cross-functional teams, and driving data-driven decision making to achieve impactful outcomes., I enjoy tackling challenging projects 
         and turning complex datasets into clear, compelling stories. Welcome to my portfolio!
       </p>
     </section>
