--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
     <section id="about" class="mb-5">
       <h2 class="section-title">About Me</h2>
       <p class="lead text-center">
-        Hi, I'm Vishal—a Dedicated and results-driven Data Analyst with a solid background in data management, predictive modelling, and business intelligence. Skilled in R, Python, SQL, and various data visualisation tools, with a proven track record of delivering actionable insights across multiple domains. Adept at implementing data quality assurance measures, collaborating with cross-functional teams, and driving data-driven decision making to achieve impactful outcomes., I enjoy tackling challenging projects 
+        Hi, I'm Vishal—a data professional passionate about transforming raw data into actionable insights.
+        With expertise in ETL processes, data analysis, and predictive modeling, I enjoy tackling challenging projects 
         and turning complex datasets into clear, compelling stories. Welcome to my portfolio!
       </p>
     </section>
@@ -134,7 +135,6 @@
 
       <!-- Project 1 -->
       <div class="project mb-5">
-        <!-- Use relative paths to fix image display issues -->
         <img src="images/image001.png" alt="ETL Process" class="project-img">
         <div class="project-body">
           <h3>
@@ -170,7 +170,6 @@
 
       <!-- Project 2 -->
       <div class="project mb-5">
-        <img src="images/Picture2.png" alt="Project Image 2" class="project-img">
         <div class="project-body">
           <h3>
             <a href="https://github.com/vslsoni/Python-sales-predictive-modelling" target="_blank">
@@ -184,14 +183,17 @@
             the goal is to develop a robust predictive model. The best-performing model is integrated into a <strong>Gradio-based interface</strong>, 
             allowing users to input store features and obtain sales predictions.
           </p>
-          <div class="row mb-3">
-            <div class="col-md-4">
-              <img src="images/Picture3.png" alt="Project Image 3" class="project-img">
-            </div>
-            <div class="col-md-4">
-              <img src="images/Picture4.png" alt="Gradio Interface" class="project-img">
-            </div>
+        </div>
+        <!-- Row for Picture2 and Picture3 (Picture2 now appears only once) -->
+        <div class="row mb-3">
+          <div class="col-md-6">
+            <img src="images/Picture2.png" alt="Project Image 2" class="project-img">
           </div>
+          <div class="col-md-6">
+            <img src="images/Picture3.png" alt="Project Image 3" class="project-img">
+          </div>
+        </div>
+        <div class="project-body">
           <h4>Objectives</h4>
           <ul>
             <li>Clean and preprocess historical sales data.</li>
@@ -199,6 +201,10 @@
             <li>Optimize hyperparameters to improve prediction accuracy.</li>
             <li>Deploy the best model using <strong>Gradio</strong> for interactive sales forecasting.</li>
           </ul>
+        </div>
+        <!-- Full-width Picture4 -->
+        <div class="mb-3">
+          <img src="images/Picture4.png" alt="Gradio Interface" class="img-fluid">
         </div>
       </div>
 
@@ -209,7 +215,7 @@
       <h2 class="section-title">Contact</h2>
       <p class="text-center">
         If you'd like to get in touch, feel free to drop me an email at 
-        <a href="mailto:vishal@example.com">vslsoni90@gmail.com</a>.
+        <a href="mailto:vishal@example.com">vishal@example.com</a>.
       </p>
     </section>
 
