--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="container">
       <a class="navbar-brand" href="#">Vishal's Portfolio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" 
-        aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+              aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarContent">
@@ -123,8 +123,7 @@
     <section id="about" class="mb-5">
       <h2 class="section-title">About Me</h2>
       <p class="lead text-center">
-        Hi, I'm Vishal—a data professional passionate about transforming raw data into actionable insights.
-        With expertise in ETL processes, data analysis, and predictive modeling, I enjoy tackling challenging projects 
+        Hi, I'm Vishal—a Dedicated and results-driven Data Analyst with a solid background in data management, predictive modelling, and business intelligence. Skilled in R, Python, SQL, and various data visualisation tools, with a proven track record of delivering actionable insights across multiple domains. Adept at implementing data quality assurance measures, collaborating with cross-functional teams, and driving data-driven decision making to achieve impactful outcomes, I enjoy tackling challenging projects 
         and turning complex datasets into clear, compelling stories. Welcome to my portfolio!
       </p>
     </section>
@@ -170,6 +169,8 @@
 
       <!-- Project 2 -->
       <div class="project mb-5">
+        <!-- Picture2 appears at the very top -->
+        <img src="images/Picture2.png" alt="Project Image 2" class="project-img">
         <div class="project-body">
           <h3>
             <a href="https://github.com/vslsoni/Python-sales-predictive-modelling" target="_blank">
@@ -181,15 +182,14 @@
             This project focuses on building and evaluating predictive models for forecasting <strong>sales in Rossmann drug stores</strong>.
             Given historical sales data and various influencing factors such as promotions, competition, holidays, and store attributes, 
             the goal is to develop a robust predictive model. The best-performing model is integrated into a <strong>Gradio-based interface</strong>, 
-            allowing users to input store features and obtain sales predictions.
+            allowing users to input store features and obtain sales predictions. Rossmann operates over <strong>3,000 stores</strong> 
+            across <strong>7 European countries</strong>. Store managers manually predict daily sales weeks in advance, leading to 
+            inconsistencies in accuracy.
           </p>
         </div>
-        <!-- Row for Picture2 and Picture3 (Picture2 now appears only once) -->
+        <!-- Picture3 appears in between -->
         <div class="row mb-3">
-          <div class="col-md-6">
-            <img src="images/Picture2.png" alt="Project Image 2" class="project-img">
-          </div>
-          <div class="col-md-6">
+          <div class="col-12">
             <img src="images/Picture3.png" alt="Project Image 3" class="project-img">
           </div>
         </div>
@@ -202,7 +202,10 @@
             <li>Deploy the best model using <strong>Gradio</strong> for interactive sales forecasting.</li>
           </ul>
         </div>
-        <!-- Full-width Picture4 -->
+        <!-- Interface subheading and Picture4 at the end -->
+        <div class="project-body">
+          <h4>Interface</h4>
+        </div>
         <div class="mb-3">
           <img src="images/Picture4.png" alt="Gradio Interface" class="img-fluid">
         </div>
