--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
             inconsistencies in accuracy.
           </p>
         </div>
-        <!-- Picture3 appears in between -->
+        <!-- Picture3 appears in between in a smaller (centered) container -->
         <div class="row mb-3">
-          <div class="col-12">
+          <div class="col-md-6 offset-md-3">
             <img src="images/Picture3.png" alt="Project Image 3" class="project-img">
           </div>
         </div>
