--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <h2 class="section-title">Contact</h2>
       <p class="text-center">
         If you'd like to get in touch, feel free to drop me an email at 
-        <a href="mailto:vishal@example.com">vishal@example.com</a>.
+        <a href="mailto:vishal@example.com">vslsoni90@gmail.com</a>.
       </p>
     </section>
 
