--- a/index.html
+++ b/index.html
@@ -8,31 +8,76 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+  <!-- AOS CSS for scroll animations -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!-- Custom CSS -->
   <style>
+    :root {
+      --primary-color: #1abc9c;
+      --secondary-color: #16a085;
+      --dark-color: #343a40;
+    }
+    html {
+      scroll-behavior: smooth;
+    }
     body {
       font-family: 'Roboto', sans-serif;
       background: #f4f6f9;
-      line-height: 1.6;
       color: #333;
+      line-height: 1.6;
     }
     /* Navbar */
     .navbar {
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
+    .navbar-scrolled {
+      background-color: rgba(0, 0, 0, 0.9) !important;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+    .navbar-brand {
+      font-weight: 700;
+      letter-spacing: 1px;
+    }
+    .nav-link {
+      margin-right: 1rem;
+      transition: color 0.3s ease;
+    }
+    .nav-link:hover {
+      color: var(--secondary-color);
     }
     /* Hero Section */
     .hero {
-      background: linear-gradient(135deg, #1abc9c, #16a085);
+      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
       color: #fff;
-      padding: 100px 0;
+      padding: 120px 0;
       text-align: center;
+      position: relative;
+      overflow: hidden;
+    }
+    .hero::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      /* A high-quality, relevant background image (fetched from Unsplash) with a low opacity overlay */
+      background: url('https://source.unsplash.com/1600x900/?data,technology') center/cover no-repeat;
+      opacity: 0.15;
+      z-index: 1;
+    }
+    .hero .container {
+      position: relative;
+      z-index: 2;
     }
     .hero h1 {
-      font-size: 3rem;
+      font-size: 3.5rem;
       margin-bottom: 20px;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
     }
     .hero p {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
     }
     /* Section Titles */
     .section-title {
@@ -40,28 +85,29 @@
       margin-bottom: 40px;
       position: relative;
       text-align: center;
+      font-size: 2rem;
     }
     .section-title::after {
       content: '';
-      width: 50px;
-      height: 3px;
-      background: #1abc9c;
+      width: 60px;
+      height: 4px;
+      background: var(--primary-color);
       display: block;
-      margin: 10px auto;
+      margin: 10px auto 0;
       border-radius: 2px;
     }
     /* Project Cards */
     .project {
       background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-      margin-bottom: 40px;
+      border-radius: 12px;
+      box-shadow: 0 8px 16px rgba(0,0,0,0.08);
+      margin-bottom: 60px;
       overflow: hidden;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
     .project:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      transform: translateY(-8px);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.12);
     }
     .project-img {
       width: 100%;
@@ -69,29 +115,54 @@
       display: block;
     }
     .project-body {
-      padding: 20px;
+      padding: 30px;
+    }
+    .project-body h3 a {
+      text-decoration: none;
+      color: var(--dark-color);
+      transition: color 0.3s ease;
+    }
+    .project-body h3 a:hover {
+      color: var(--primary-color);
+    }
+    .project-body h4 {
+      margin-top: 20px;
+      color: var(--secondary-color);
+      font-weight: 500;
+    }
+    .project-body p,
+    .project-body ul {
+      margin-bottom: 20px;
+    }
+    .project-body ul {
+      padding-left: 20px;
+    }
+    .project-body ul li {
+      margin-bottom: 8px;
+    }
+    /* Contact Section */
+    #contact p a {
+      font-weight: 500;
+      color: var(--primary-color);
+      transition: color 0.3s ease;
+    }
+    #contact p a:hover {
+      color: var(--secondary-color);
     }
     /* Footer */
     footer {
-      background-color: #343a40;
+      background-color: var(--dark-color);
       color: #fff;
-      padding: 20px 0;
+      padding: 30px 0;
       text-align: center;
-    }
-    /* Links */
-    a {
-      color: #1abc9c;
-    }
-    a:hover {
-      color: #16a085;
-      text-decoration: none;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" data-aos="fade-down">
     <div class="container">
       <a class="navbar-brand" href="#">Vishal's Portfolio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" 
@@ -109,7 +180,7 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="hero">
+  <section class="hero" data-aos="fade-up">
     <div class="container">
       <h1>Welcome to My Portfolio</h1>
       <p>Exploring Data, ETL, and Predictive Modelling with Passion</p>
@@ -118,9 +189,8 @@
 
   <!-- Main Content -->
   <div class="container my-5">
-
     <!-- About Me Section -->
-    <section id="about" class="mb-5">
+    <section id="about" class="mb-5" data-aos="fade-up" data-aos-delay="100">
       <h2 class="section-title">About Me</h2>
       <p class="lead text-center">
         Hi, I'm Vishal—a Dedicated and results-driven Data Analyst with a solid background in data management, predictive modelling, and business intelligence. Skilled in R, Python, SQL, and various data visualisation tools, with a proven track record of delivering actionable insights across multiple domains. Adept at implementing data quality assurance measures, collaborating with cross-functional teams, and driving data-driven decision making to achieve impactful outcomes, I enjoy tackling challenging projects 
@@ -129,11 +199,11 @@
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="mb-5">
+    <section id="projects" class="mb-5" data-aos="fade-up" data-aos-delay="200">
       <h2 class="section-title">Projects</h2>
 
       <!-- Project 1 -->
-      <div class="project mb-5">
+      <div class="project mb-5" data-aos="fade-up" data-aos-delay="300">
         <img src="images/image001.png" alt="ETL Process" class="project-img">
         <div class="project-body">
           <h3>
@@ -157,10 +227,10 @@
           </ul>
           <h4>Dashboard</h4>
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="fade-right" data-aos-delay="400">
               <img src="images/dashboard1.png" alt="Dashboard 1" class="project-img">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="fade-left" data-aos-delay="400">
               <img src="images/dashboard2.png" alt="Dashboard 2" class="project-img">
             </div>
           </div>
@@ -168,7 +238,7 @@
       </div>
 
       <!-- Project 2 -->
-      <div class="project mb-5">
+      <div class="project mb-5" data-aos="fade-up" data-aos-delay="500">
         <!-- Picture2 appears at the very top -->
         <img src="images/Picture2.png" alt="Project Image 2" class="project-img">
         <div class="project-body">
@@ -188,12 +258,12 @@
           </p>
         </div>
         <!-- Picture3 appears in between in a smaller (centered) container -->
-        <div class="row mb-3">
+        <div class="row mb-3" data-aos="zoom-in" data-aos-delay="600">
           <div class="col-md-6 offset-md-3">
             <img src="images/Picture3.png" alt="Project Image 3" class="project-img">
           </div>
         </div>
-        <div class="project-body">
+        <div class="project-body" data-aos="fade-up" data-aos-delay="700">
           <h4>Objectives</h4>
           <ul>
             <li>Clean and preprocess historical sales data.</li>
@@ -203,10 +273,10 @@
           </ul>
         </div>
         <!-- Interface subheading and Picture4 at the end -->
-        <div class="project-body">
+        <div class="project-body" data-aos="fade-up" data-aos-delay="800">
           <h4>Interface</h4>
         </div>
-        <div class="mb-3">
+        <div class="mb-3" data-aos="zoom-in" data-aos-delay="900">
           <img src="images/Picture4.png" alt="Gradio Interface" class="img-fluid">
         </div>
       </div>
@@ -214,7 +284,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="mb-5">
+    <section id="contact" class="mb-5" data-aos="fade-up" data-aos-delay="1000">
       <h2 class="section-title">Contact</h2>
       <p class="text-center">
         If you'd like to get in touch, feel free to drop me an email at 
@@ -225,7 +295,7 @@
   </div>
 
   <!-- Footer -->
-  <footer>
+  <footer data-aos="fade-up" data-aos-delay="1100">
     <div class="container">
       <p>&copy; 2025 Vishal. All rights reserved.</p>
     </div>
@@ -233,5 +303,23 @@
 
   <!-- Bootstrap JS Bundle (includes Popper) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- AOS JS for animations -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 800,
+      once: true
+    });
+    
+    // Change navbar background on scroll for a refined effect
+    window.addEventListener('scroll', function() {
+      const navbar = document.querySelector('.navbar');
+      if (window.scrollY > 50) {
+        navbar.classList.add('navbar-scrolled');
+      } else {
+        navbar.classList.remove('navbar-scrolled');
+      }
+    });
+  </script>
 </body>
 </html>
