--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   <section class="hero" data-aos="fade-up">
     <div class="container">
       <h1>Welcome to My Portfolio</h1>
-      <p>Exploring Data, ETL, and Predictive Modelling with Passion</p>
+      <p>Exploring Data, ETL Process, and Predictive Modelling with Passion</p>
     </div>
   </section>
 
